# ShortLink

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  README.md
3rdParties/: catch.hpp
ShortLink/: CMakeLists.txt
Sources/: main.cpp  tests.cpp
Sources/include/private/: HashToShortURLConverter.h  ShortLinkServer.h  URLCodec.h  URLCutter.h  URLToHashConverter.h
Sources/include/public/: IURLCodec.h  IURLCutter.h
Sources/src/: HashToShortURLConverter.cpp  ShortLinkServer.cpp  URLCodec.cpp  URLCutter.cpp  URLToHashConverter.cpp
